# ECAD

./: .gitignore  README.md  conftest.py  pyproject.toml
docs/qet/: CLAUDE_QET_addendum.md
examples/: __init__.py  motor_start_stop.py
panelkit/: __init__.py  cli.py
panelkit/examples/: __init__.py  motor_start_stop.py
panelkit/integrations/: __init__.py
panelkit/integrations/wireviz/: __init__.py  export.py  mapping.py  runner.py
panelkit/model/: __init__.py  component.py  connectivity.py  geometry.py  harness.py  layout.py  project.py
panelkit/persistence/: __init__.py  json_store.py  sqlite_store.py
panelkit/routing/: __init__.py  resolve.py  router.py
panelkit/rules/: __init__.py  checks.py
panelkit/views/: __init__.py  bom.py  connection_list.py  netlist.py  svg_schematic.py  svg_util.py  svg_wiring.py  terminal_plan.py
scripts/: check_qet_fixtures.py
tests/: conftest.py  test_connectivity.py  test_example.py  test_geometry.py  test_harness.py  test_model.py  test_persistence.py  test_resolve.py  test_router.py  test_rules.py  test_views.py  test_wireviz_export.py
tests/data/: README.md  motor_field_harness.golden.yml  motor_start_stop.import.golden.json  motor_start_stop.qet  motor_start_stop.terminal_map.json
